--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@ body {
   
   .bg-container {
     height: 100%;
-    background-image: url('background.jpg');
+    background-image: url('/images/background.jpg');
     background-size: cover;
     background-position: center;
   }
