--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,8 @@ body {
     background-image: url('/images/background.jpg');
     background-size: cover;
     background-position: center;
+    width: 100%; /* Добавлено */
+    position: relative; /* Добавлено */
   }
   
   .bg-light {
