--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,11 +6,11 @@ body {
   }
   
   .bg-container {
-    height: 100%;
+    height: 600;
     background-image: url('/images/background.jpg');
     background-size: cover;
     background-position: center;
-    width: 100%; /* Добавлено */
+    width: 1000; /* Добавлено */
     position: relative; /* Добавлено */
   }
   
