--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@ body {
   }
   
   .bg-container {
-    background-image: url('/images/background.jpg');
+    background-image: url('/images/background2.jpg');
     height: 100%;
     background-size: cover;
     background-position: center;
