--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,18 +3,20 @@ body {
     padding: 0;
     height: 100%;
     overflow: hidden;
-  }
-  
-  .bg-container {
+}
+
+.bg-container {
     background-image: url('/images/background2.jpg');
     height: 100%;
     background-size: cover;
     background-position: center;
-    width: 100%; /* Добавлено */
-    position: relative; /* Добавлено */
-  }
-  
-  .bg-light {
+    width: 100%;
+    /* Добавлено */
+    position: relative;
+    /* Добавлено */
+}
+
+.bg-light {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -24,4 +26,4 @@ body {
     transform: translate(-50%, -50%);
     pointer-events: none;
     mix-blend-mode: screen;
-  }
+}
