--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,14 +6,10 @@ body {
 }
 
 .bg-container {
-    background-image: url('/images/background2.jpg');
+    background-image: url("images/background2.jpg");
     height: 100%;
     background-size: cover;
     background-position: center;
-    width: 100%;
-    /* Добавлено */
-    position: relative;
-    /* Добавлено */
 }
 
 .bg-light {
