--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,10 +6,12 @@ body {
 }
 
 .bg-container {
-    background-image: url("images/background2.jpg");
+    background-image: url("images\background.jpg");
     height: 100%;
+    width: 100%;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 
 .bg-light {
