--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,10 +8,10 @@ body {
 .bg-container {
     background-image: url("../images/background1.jpg");
     height: 100%;
-    width: 100%;
+    /* width: 100%; */
     background-size: cover;
     background-position: center;
-    position: relative;
+    /* position: relative; */
 }
 
 .bg-light {
