--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body {
     /* position: relative; */
 }
 
-.bg-light {
+/* .bg-light {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -24,4 +24,4 @@ body {
     transform: translate(-50%, -50%);
     pointer-events: none;
     mix-blend-mode: screen;
-}
+} */
