--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,15 +6,12 @@ body {
 }
 
 .bg-container {
-    background-image: url("../images/background1.jpg");
     height: 100%;
-    /* width: 100%; */
     background-size: cover;
     background-position: center;
-    /* position: relative; */
 }
 
-/* .bg-light {
+.bg-light {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -24,4 +21,4 @@ body {
     transform: translate(-50%, -50%);
     pointer-events: none;
     mix-blend-mode: screen;
-} */
+}
