--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-html, body {
+body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -6,22 +6,32 @@ html, body {
 }
 
 .bg-container {
+    position: relative;
     height: 100%;
-    width: 100%;
     background-size: cover;
     background-position: center;
-    position: relative;
+}
+
+.bg-container img {
+    display: none;
 }
 
 .bg-light {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    height: 300px;
     background-image: radial-gradient(circle, rgba(255, 255, 255, 0.8) 50%, transparent 100%);
     background-position: center;
     background-repeat: no-repeat;
     transform: translate(-50%, -50%);
     pointer-events: none;
     mix-blend-mode: screen;
-    border-radius: 50%;
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
+}
+
+.bg-container:hover .bg-light {
+    opacity: 1;
 }
